--- a/index.html
+++ b/index.html
@@ -6,48 +6,56 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Recepty (standardní verze)</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Source+Sans+3&display=swap" rel="stylesheet">
+
 </head>
 <body>
-
+	
 	<!-- největší hlavní recept -->
-	Saláty
-	5 komentářů
+<div class="recepty">
+	<div class="salaty">
+		<div class="komentare">
+		Saláty
+		5 komentářů
+		</div>
+	<h1>Salát s&nbsp;vlašskými ořechy</h1>
+	</div>
 
-	Salát s&nbsp;vlašskými ořechy
-
-
+	<div class="svacina">
 	<!-- malý recept 1 -->
 	Svačina
 	16 komentářů
 
-	Chlebíček s&nbsp;avokádem
+	<h2>Chlebíček s&nbsp;avokádem</h2>
+	</div>
 
-
+	<div class="mexicka">
 	<!-- malý recept 2 -->
 	Mexická
 	7 komentářů
 
-	Avokádové tacos
+	<h2>Avokádové tacos</h2>
+	</div>
 
-
+	<div class="lusteniny">
 	<!-- malý recept 3 -->
 	Luštěniny
 	23 komentářů
 
-	Pita chléb s&nbsp;cizrnou
+	<h2>Pita chléb s&nbsp;cizrnou</h2>
+	</div>
 
-
+	<div class="burgery">
 	<!-- malý recept 4 -->
 	Burgery
 	19 komentářů
 
-	Sojový burger
-
-
+	<h2>Sojový burger</h2>
+	</div>
 
 	<footer class="paticka">
 		<p>Foto z <a href="https://unsplash.com">unsplash.com</a> (licence <a href="https://unsplash.com/license">do-whatever-you-want</a>)</p>
 	</footer>
-
+</div>
 </body>
 </html>
